--- a/Sicsoft.Checkin.Web/Pages/Movimientos/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Movimientos/Observar.cshtml
@@ -9,7 +9,7 @@
         <a asp-page="./Index">BackOffice</a>
     </li>
     <li class="breadcrumb-item active">
-        <a>Generar Movimiento</a>
+        <a>Observar Movimiento</a>
     </li>
 
 }
