--- a/Sicsoft.Checkin.Web/Pages/PlazosCreditos/Nuevo.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/PlazosCreditos/Nuevo.cshtml
@@ -1,24 +1,24 @@
 ﻿@page
-@model Boletaje.Pages.CondicionesPagos.NuevoModel
+@model Boletaje.Pages.PlazosCreditos.NuevoModel
 @{
-    ViewData["Title"] = "Condiciones de Pago";
+    ViewData["Title"] = "Plazos de Credito";
 }
-@section breadcrumb{
+@section breadcrumb {
 
     <li class="breadcrumb-item">
-        <a asp-page="./Index">Condiciones de Pago</a>
+        <a asp-page="./Index">Plazos de Credito</a>
     </li>
     <li class="breadcrumb-item active">
         <a>Agregar</a>
     </li>
 
 }
-@section styles{
+@section styles {
 
 
 }
 
-@section scripts{
+@section scripts {
 
 
 
@@ -30,12 +30,12 @@
             <div class="card-header">
                 <div class="row">
                     <div class="col-sm-6">
-                        <h5 class="title">Registro de Condiciones de Pago</h5>
+                        <h5 class="title">Registro de Plazos de Credito</h5>
                     </div>
 
                     <div class="col-sm-6" style="text-align: right">
 
-                        <a asp-page="/CondicionesPagos/Index" class="nav-link text-dark" style="text-decoration: underline;"><i class="fas fa-reply "></i>  Regresar</a>
+                        <a asp-page="/PlazosCreditos/Index" class="nav-link text-dark" style="text-decoration: underline;"><i class="fas fa-reply "></i>  Regresar</a>
 
                     </div>
                 </div>
