--- a/Sicsoft.Checkin.Web/Pages/Facturas/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Facturas/Observar.cshtml
@@ -225,7 +225,7 @@
 
                         <div>CardCode: @Model.Input.CardCode</div>
                         <div>Cliente: @Model.Input.NombreCliente</div>
-                        <div>Telefono: @Model.Llamada.NumeroPersonaContacto</div>
+                        <div>Telefono: @Model.Cliente.Phone1</div>
                         <div>Persona Contacto: @Model.Llamada.PersonaContacto</div>
                         <div>Email: @Model.Input.Correo</div>
 
