--- a/Sicsoft.Checkin.Web/Pages/Bodega/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Bodega/Observar.cshtml
@@ -1017,8 +1017,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label> Detalle:</label>
-                                <input type="text" class="form-control form-control-lg" id="DetalleActividad" placeholder="Detalle Actividad">
-
+                                <textarea class="form-control form-control-lg" id="DetalleActividad"></textarea> 
                             </div>
                         </div>
                     </div>
