--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Actividades.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Actividades.cshtml
@@ -446,7 +446,7 @@
                     <div class="col-md-6">
                         <div class="form-group">
                             <label> Detalle:</label>
-                            <input type="text" class="form-control form-control-lg" id="Detalle" placeholder="Detalle Actividad">
+                            <textarea class="form-control form-control-lg" id="Detalle"></textarea> 
 
                         </div>
                     </div>
